# agl_anonymizer_pipeline

./: .envrc  .gitignore  Cargo.toml  README.md  build.rs  cuda-shell.nix  devenv.nix  devenv.yaml  erver v0.1.32  flake copy.nix  flake.nix  hbrown v0.15.2  ick v1.1.3  lib.rs  pymu311flake.txt  pyproject.toml  requirements.txt  result  setup.sh
.direnv/: flake-profile  flake-profile-14-link  flake-profile-15-link  flake-profile-21-link  flake-profile-31-link  flake-profile-32-link
agl_anonymizer_pipeline/: README.md  blur.py  box_operations.py  device_reader.py  directory_setup.py  east_text_detection.py  flair_NER.py  image_reassembly.py  jsonresponse.py  main.py  names_adder.py  names_generator.py  ocr.py  ocr_pipeline_manager.py  pdf_operations.py  phrase_combination.py  region_detector.py  result  spacy_NER.py  temp_dir_setup.py  tesseract_text_detection.py
agl_anonymizer_pipeline/.direnv/: flake-profile-8-link  flake-profile-9-link
agl_anonymizer_pipeline/agl_anonymizer_pipeline/: .gitignore  pdf_operations.py
agl_anonymizer_pipeline/agl_anonymizer_pipeline/.direnv/: flake-profile-11-link  flake-profile-13-link
agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/: .gitignore  README.md  pyproject.toml
agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/.direnv/: flake-profile-12-link  flake-profile-7-link
agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/: box_operations.py  east_text_detection.py  flair_NER.py  image_reassembly.py  main.py  phrase_combination.py
agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/names_dict/firstandlastword/: fn.py
agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/agl_anonymizer_pipeline/unused_scripts/trying_to_implement_tesseract/: tesseract_ocr.py
agl_anonymizer_pipeline/agl_anonymizer_pipeline/devices/: olympus_cv_1500.json
agl_anonymizer_pipeline/agl_anonymizer_pipeline/names_dict/: first_and_last_name_neutral.txt
agl_anonymizer_pipeline/devices/: default.json  olympus_cv_1500.json
agl_anonymizer_pipeline/names_dict/: first_and_last_names_neutral_ascii.txt  first_names_neutral_ascii.txt  last_names_neutral_ascii.txt
agl_anonymizer_pipeline/unused_scripts/for_blurring/: censor.py
alternative_install_flakes/: devenv.nix  flake devenv.nix  flake mach-nix.nix
cuda_install/: .envrc  flake.nix  pyproject.toml
nix/: sources.json
rust/: Cargo.nix  Cargo.toml  build.rs  flake.nix
tests/: cudatest.py
uv2nix/: flake.nix
