[tool.poetry]
name = "agl_anonymizer_pipeline"
version = "0.1.12"
description = "This package is made to censor sensitive data in images and extract the contents. NER is planned for the future."
authors = ["maxhild <58726316+maxhild@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[project.scripts]
cli = "app.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "3.11.9"
numpy = "2.1.3"
gender-guesser = "0.4.0"
gensim = "4.3.0"
pytesseract = "0.3.13"
imutils = "0.5.4"
opencv-python-headless = "4.9.0.80"
flair = "0.14.0"
transformers = "4.26.0"
torch = "2.1.1"
torchvision = "0.15.1"
torchaudio = "0.10.0"


[tool.poetry.group.nixProvided.dependencies]
# opencv-python = "^4.10.0"
PyMuPDF = "=1.23.26"
spacy-lookups-data = "1.0.0"
spacy = "=3.4.2"




