[tool.poetry]
name = "agl_anonymizer_pipeline"
version = "0.1.12"
description = "This package is made to censor sensitive data in images and extract the contents. NER is planned for the future."
authors = ["maxhild <58726316+maxhild@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[project.scripts]
cli = "app.main:main"

[build-system]
requires = ["maturin=1.5.1", "wheel", "setuptools-rust"]
build-backend = "maturin"


[tool.maturin]
bindings = "pyo3"


[tool.poetry.dependencies]
python = "3.11.9"
numpy = "2.1.3"
spacy = "=3.4.2"
spacy-lookups-data = "1.0.0"
gender-guesser = "0.4.0"
gensim = "4.3.0"
pytesseract = "0.3.13"
imutils = "0.5.4"
opencv-python-headless = "4.9.0.80"
flair = "0.13.1"
transformers = "4.43.0"



[tool.poetry.group.nixProvided.dependencies]
# opencv-python = "4.10.0"
PyMuPDF = "1.23.26"
tokenizers = "0.19.1"
hatchling = "1.24.2"
ftfy = "6.2.0"
setuptools = "69.5.1"
safetensors = "0.4.3"
torch = "2.3.0"
torchvision = "0.18.0"
torchaudio = "2.3.0"
maturin = "1.5.1"
gdown = "5.2.0"
setuptools-rust = "1.9.0"
