[package]
name = "agl_anonymizer_pipeline"
version = "0.1.12"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
maturin = { version = "1.5.1"}
safetensors = { version = "0.4.3" }
setuptools-rust = "1.9.0"

[[bin]]
name = "agl_anonymizer_pipeline"
path = "main.rs"
